fix: correct margin syntax in custom styles and add missing text alignment for images

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,7 +2,8 @@
 
 // -- Put custom style under this point -- //
 img + em { 
-	margin-bottom: 1.5em;;
+	margin-bottom: 1.5em;
+    text-align: center;
 }
 
 .disclaimer {
